# ha-etrel-inch

./: CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements.txt
custom_components/etrel_inch/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  datetime.py  manifest.json  modbus_client.py  number.py  sensor.py  strings.json  switch.py
custom_components/etrel_inch/translations/: en.json  lv.json
